@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2022-09-19 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Fix cloudi_service_health_check inet:getaddrs/3 timeout
+
 2022-09-15 Michael Truog   <mjtruog at protonmail dot com>
 
     * Improve cloudi_availability calculation
